fixed z-indexes

--- a/my-ts-react-app/src/sass/Home.scss
+++ b/my-ts-react-app/src/sass/Home.scss
@@ -74,7 +74,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
-                    z-index: 10;
+                    z-index: 20;
                     position: relative;
                 }
             }
@@ -82,14 +82,14 @@
         }
     }
     .blue-ball {
-        z-index: 1;
+        z-index: 8;
         top: 45%;
         right: 5%;
         transform: translate(50%, -50%);
         position: absolute;
     }
     .pink-ball {
-        z-index: 10;
+        z-index: 9;
         top: 50%;
         right: 25%;
         transform: translate(50%, -50%);
